LPD-59097 Extract sidecar configuring into a SidecarRuntimeConfiguration and its builder, and make Sidecar only use the information from the SidecarRuntimeConfiguration