@@ -8,68 +8,43 @@ package com.liferay.portal.search.elasticsearch7.internal.sidecar;
 import com.liferay.petra.concurrent.FutureListener;
 import com.liferay.petra.concurrent.NoticeableFuture;
 import com.liferay.petra.process.ProcessChannel;
-import com.liferay.petra.process.ProcessConfig;
 import com.liferay.petra.process.ProcessException;
 import com.liferay.petra.process.ProcessExecutor;
 import com.liferay.petra.string.StringBundler;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
-import com.liferay.portal.kernel.util.HashMapBuilder;
-import com.liferay.portal.kernel.util.JavaDetector;
-import com.liferay.portal.kernel.util.ListUtil;
-import com.liferay.portal.kernel.util.OSDetector;
-import com.liferay.portal.kernel.util.StringUtil;
-import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.search.elasticsearch7.internal.configuration.ElasticsearchConfigurationWrapper;
-import com.liferay.portal.search.elasticsearch7.internal.sidecar.constants.SidecarConstants;
-import com.liferay.portal.search.elasticsearch7.internal.util.ResourceUtil;
-import com.liferay.portal.search.elasticsearch7.sidecar.agent.SidecarAgent;
-import com.liferay.portal.util.PortalClassPathUtil;
-import com.liferay.portal.util.PropsValues;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.Serializable;
 
-import java.net.URISyntaxException;
-import java.net.URL;
-
-import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import java.security.CodeSource;
-import java.security.ProtectionDomain;
-
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
-
-import org.elasticsearch.common.settings.Settings;
 
 /**
  * @author Tina Tian
  */
 public class Sidecar {
 
-	public Sidecar(
-		ElasticsearchConfigurationWrapper elasticsearchConfigurationWrapper,
-		ElasticsearchInstancePaths elasticsearchInstancePaths,
-		ProcessExecutor processExecutor,
-		FutureListener<Serializable> restartFutureListener) {
+	public static final String DEFAULT_MODULES_FOLDER_NAME = "modules";
 
-		_elasticsearchConfigurationWrapper = elasticsearchConfigurationWrapper;
-		_elasticsearchInstancePaths = elasticsearchInstancePaths;
+	public static final String SIDECAR_MODULES_FOLDER_NAME =
+		"liferay-sidecar-modules";
+
+	public Sidecar(
+		ProcessExecutor processExecutor,
+		FutureListener<Serializable> restartFutureListener,
+		SidecarRuntimeConfiguration sidecarRuntimeConfiguration) {
+
 		_processExecutor = processExecutor;
 		_restartFutureListener = restartFutureListener;
+		_sidecarRuntimeConfiguration = sidecarRuntimeConfiguration;
 
-		_sidecarHomePath = elasticsearchInstancePaths.getHomePath();
+		_sidecarHomePath = sidecarRuntimeConfiguration.getHomePath();
 	}
 
 	public String getNetworkHostAddress() {
@@ -80,11 +55,6 @@ public class Sidecar {
 		if (_log.isDebugEnabled()) {
 			_log.debug("Sidecar Elasticsearch starting");
 		}
-
-		String sidecarVersion = ResourceUtil.getResourceAsString(
-			getClass(), SidecarConstants.SIDECAR_VERSION_FILE_NAME);
-
-		_installElasticsearchIfNeeded(sidecarVersion);
 
 		ProcessChannel<Serializable> processChannel =
 			_executeSidecarMainProcess();
@@ -99,8 +69,10 @@ public class Sidecar {
 		if (_log.isInfoEnabled()) {
 			_log.info(
 				StringBundler.concat(
-					"Sidecar Elasticsearch ", sidecarVersion, StringPool.SPACE,
-					_getNodeName(), " started at ", address));
+					"Sidecar Elasticsearch ",
+					_sidecarRuntimeConfiguration.getVersion(), StringPool.SPACE,
+					_sidecarRuntimeConfiguration.getNodeName(), " started at ",
+					address));
 		}
 
 		_address = address;
@@ -122,7 +94,7 @@ public class Sidecar {
 
 			try {
 				noticeableFuture.get(
-					_elasticsearchConfigurationWrapper.sidecarShutdownTimeout(),
+					_sidecarRuntimeConfiguration.getShutdownTimeout(),
 					TimeUnit.MILLISECONDS);
 			}
 			catch (Exception exception) {
@@ -132,8 +104,8 @@ public class Sidecar {
 							StringBundler.concat(
 								"Forcibly shutdown sidecar Elasticsearch ",
 								"process because it did not shut down in ",
-								_elasticsearchConfigurationWrapper.
-									sidecarShutdownTimeout(),
+								_sidecarRuntimeConfiguration.
+									getShutdownTimeout(),
 								" ms"),
 							exception);
 					}
@@ -145,64 +117,7 @@ public class Sidecar {
 			_processChannel = null;
 		}
 
-		PathUtil.deleteDir(_sidecarTempDirPath);
-	}
-
-	private String _createClasspath(
-		Path dirPath, DirectoryStream.Filter<Path> filter) {
-
-		try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(
-				dirPath, filter)) {
-
-			StringBundler sb = new StringBundler();
-
-			directoryStream.forEach(
-				path -> {
-					sb.append(path);
-					sb.append(File.pathSeparator);
-				});
-
-			if (sb.index() > 0) {
-				sb.setIndex(sb.index() - 1);
-			}
-
-			return sb.toString();
-		}
-		catch (IOException ioException) {
-			throw new RuntimeException(
-				"Unable to iterate " + dirPath, ioException);
-		}
-	}
-
-	private ProcessConfig _createProcessConfig() {
-		ProcessConfig.Builder builder = new ProcessConfig.Builder();
-
-		URL bundleURL = _getBundleURL(Sidecar.class);
-
-		String bootstrapClassPath = _createClasspath(
-			Paths.get(PropsValues.LIFERAY_SHIELDED_CONTAINER_LIB_PORTAL_DIR),
-			path -> {
-				String name = String.valueOf(path.getFileName());
-
-				return name.contains("petra");
-			});
-
-		return builder.setArguments(
-			_getJVMArguments()
-		).setBootstrapClassPath(
-			bootstrapClassPath
-		).setEnvironment(
-			_getEnvironment()
-		).setJavaExecutable(
-			System.getProperty("java.home") + "/bin/java"
-		).setProcessLogConsumer(
-			PortalClassPathUtil.createProcessLogConsumer(_log)
-		).setReactClassLoader(
-			Sidecar.class.getClassLoader()
-		).setRuntimeClassPath(
-			StringBundler.concat(
-				bundleURL.getPath(), File.pathSeparator, bootstrapClassPath)
-		).build();
+		PathUtil.deleteDir(_sidecarRuntimeConfiguration.getTempDirPath());
 	}
 
 	private ProcessChannel<Serializable> _executeSidecarMainProcess() {
@@ -214,10 +129,9 @@ public class Sidecar {
 
 		try {
 			return _processExecutor.execute(
-				_createProcessConfig(),
+				_sidecarRuntimeConfiguration.getProcessConfig(),
 				new SidecarMainProcessCallable(
-					_elasticsearchConfigurationWrapper.
-						sidecarHeartbeatInterval()));
+					_sidecarRuntimeConfiguration.getHeartbeatInterval()));
 		}
 		catch (ProcessException processException) {
 			throw new RuntimeException(
@@ -226,262 +140,12 @@ public class Sidecar {
 		}
 	}
 
-	private URL _getBundleURL(Class<?> clazz) {
-		ProtectionDomain protectionDomain = clazz.getProtectionDomain();
-
-		CodeSource codeSource = protectionDomain.getCodeSource();
-
-		return codeSource.getLocation();
-	}
-
-	private Distribution _getElasticsearchDistribution(String sidecarVersion) {
-		if (sidecarVersion.equals(ElasticsearchDistribution.VERSION)) {
-			return new ElasticsearchDistribution();
-		}
-
-		throw new IllegalArgumentException(
-			"Unsupported Elasticsearch version: " + sidecarVersion);
-	}
-
-	private HashMap<String, String> _getEnvironment() {
-		return HashMapBuilder.putAll(
-			System.getenv()
-		).put(
-			"HOSTNAME", "localhost"
-		).put(
-			"LIBFFI_TMPDIR", _sidecarHomePath.toString()
-		).build();
-	}
-
-	private List<String> _getJVMArguments() {
-		List<String> arguments = new ArrayList<>();
-
-		for (String jvmOption :
-				_elasticsearchConfigurationWrapper.sidecarJVMOptions()) {
-
-			if (jvmOption.contains("|")) {
-				if (_log.isWarnEnabled()) {
-					_log.warn(
-						jvmOption + " is not a valid format for the JVM " +
-							"options and will be ignored");
-				}
-			}
-			else {
-				arguments.add(jvmOption);
-			}
-		}
-
-		if (_elasticsearchConfigurationWrapper.sidecarDebug()) {
-			arguments.add(
-				_elasticsearchConfigurationWrapper.sidecarDebugSettings());
-		}
-
-		try {
-			_sidecarTempDirPath = Files.createTempDirectory("sidecar");
-		}
-		catch (IOException ioException) {
-			throw new IllegalStateException(
-				"Unable to create temp folder", ioException);
-		}
-
-		Path configFolder = _sidecarTempDirPath.resolve("config");
-
-		try {
-			Files.createDirectories(configFolder);
-
-			Files.write(
-				configFolder.resolve("log4j2.properties"),
-				List.of(
-					ResourceUtil.getResourceAsString(
-						Sidecar.class, "/log4j2.properties")));
-		}
-		catch (IOException ioException) {
-			_log.error(
-				"Unable to copy log4j2.properties to " + configFolder,
-				ioException);
-		}
-
-		arguments.add("-Des.distribution.type=tar");
-		arguments.add("-Des.networkaddress.cache.negative.ttl=10");
-		arguments.add("-Des.networkaddress.cache.ttl=60");
-		arguments.add("-Des.path.conf=" + configFolder);
-		arguments.add("-Dfile.encoding=UTF-8");
-		arguments.add("-Dio.netty.noKeySetOptimization=true");
-		arguments.add("-Dio.netty.noUnsafe=true");
-		arguments.add("-Dio.netty.recycler.maxCapacityPerThread=0");
-		arguments.add("-Djava.awt.headless=true");
-		arguments.add("-Djava.io.tmpdir=" + _sidecarTempDirPath);
-		arguments.add("-Djna.nosys=true");
-		arguments.add("-Dlog4j.shutdownHookEnabled=false");
-		arguments.add("-Dlog4j2.disable.jmx=true");
-		arguments.add("-Dlog4j2.formatMsgNoLookups=true");
-		arguments.add(
-			"-Dorg.apache.lucene.vectorization.upperJavaFeatureVersion=21");
-		arguments.add("--enable-native-access=ALL-UNNAMED");
-		arguments.add(
-			"--enable-native-access=org.elasticsearch.nativeaccess," +
-				"org.apache.lucene.core");
-
-		if (JavaDetector.isJDK21() && OSDetector.isLinux()) {
-			arguments.add("-XX:-UseContainerSupport");
-		}
-
-		// Modules
-
-		arguments.add("--add-modules=jdk.incubator.vector");
-		arguments.add("--add-modules=jdk.management.agent");
-		arguments.add("--add-modules=jdk.net");
-		arguments.add("--add-modules=ALL-MODULE-PATH");
-		arguments.add(
-			"--add-opens=org.elasticsearch.server/org.elasticsearch." +
-				"bootstrap=ALL-UNNAMED");
-		arguments.add("--module-path=" + _sidecarHomePath.resolve("lib"));
-		arguments.add("-Djdk.module.main=org.elasticsearch.server");
-
-		// Apply agent to load modified classes
-
-		Path agentPath = null;
-
-		URL sidecarAgentBundleURL = _getBundleURL(SidecarAgent.class);
-
-		try {
-			agentPath = Path.of(sidecarAgentBundleURL.toURI());
-		}
-		catch (URISyntaxException uriSyntaxException) {
-			if (_log.isDebugEnabled()) {
-				_log.debug(uriSyntaxException);
-			}
-
-			File file = new File(sidecarAgentBundleURL.getPath());
-
-			agentPath = file.toPath();
-		}
-
-		arguments.add("-javaagent:" + agentPath);
-
-		return arguments;
-	}
-
-	private String _getNodeName() {
-		String nodeName = _elasticsearchConfigurationWrapper.nodeName();
-
-		if (!Validator.isBlank(nodeName)) {
-			return nodeName;
-		}
-
-		return "liferay_sidecar";
-	}
-
-	private SidecarServerArgs _getSidecarServerArgs() {
-		Settings settings = ElasticsearchInstanceSettingsBuilder.builder(
-		).clusterName(
-			_elasticsearchConfigurationWrapper.clusterName()
-		).discoveryTypeSingleNode(
-			true
-		).elasticsearchConfigurationWrapper(
-			_elasticsearchConfigurationWrapper
-		).elasticsearchInstancePaths(
-			_elasticsearchInstancePaths
-		).httpPortRange(
-			new HttpPortRange(_elasticsearchConfigurationWrapper)
-		).nodeName(
-			_getNodeName()
-		).build();
-
-		StringBundler sb = new StringBundler((2 * settings.size()) + 1);
-
-		sb.append("Sidecar Elasticsearch properties : {");
-
-		Map<String, Serializable> settingsMap = new HashMap<>();
-
-		for (String key : settings.keySet()) {
-			List<String> list = settings.getAsList(key);
-
-			if (ListUtil.isEmpty(list)) {
-				continue;
-			}
-
-			String keyValue = StringBundler.concat(
-				key, StringPool.EQUAL, StringUtil.merge(list));
-
-			sb.append(keyValue);
-
-			sb.append(StringPool.COMMA);
-
-			if (list.size() == 1) {
-				settingsMap.put(key, list.get(0));
-			}
-			else {
-				settingsMap.put(key, new ArrayList<>(list));
-			}
-		}
-
-		sb.setStringAt(StringPool.CLOSE_CURLY_BRACE, sb.index() - 1);
-
-		if (_log.isDebugEnabled()) {
-			_log.debug(sb.toString());
-		}
-
-		return new SidecarServerArgs(
-			String.valueOf(_sidecarTempDirPath.resolve("config")), false,
-			String.valueOf(_sidecarHomePath.resolve("logs")), false,
-			settingsMap);
-	}
-
-	private void _installElasticsearchIfNeeded(String sidecarVersion) {
-		ElasticsearchInstaller.builder(
-		).distributablesDirectoryPath(
-			_elasticsearchInstancePaths.getWorkPath()
-		).distribution(
-			_getElasticsearchDistribution(sidecarVersion)
-		).installationDirectoryPath(
-			_sidecarHomePath
-		).build(
-		).install();
-
-		Path modulesPath = _sidecarHomePath.resolve(
-			_SIDECAR_MODULES_FOLDER_NAME);
-
-		if (Files.exists(modulesPath)) {
-			return;
-		}
-
-		Path defaultModulesPath = _sidecarHomePath.resolve(
-			_DEFAULT_MODULES_FOLDER_NAME);
-
-		try {
-			PathUtil.copyDirectory(
-				defaultModulesPath, modulesPath,
-				dir -> {
-					if (Objects.equals(dir, defaultModulesPath)) {
-						return false;
-					}
-
-					for (String sidecarModuleName :
-							_elasticsearchConfigurationWrapper.
-								sidecarModuleNames()) {
-
-						if (dir.startsWith(
-								defaultModulesPath.resolve(
-									sidecarModuleName))) {
-
-							return false;
-						}
-					}
-
-					return true;
-				});
-		}
-		catch (IOException ioException) {
-			throw new RuntimeException(ioException);
-		}
-	}
-
 	private String _startElasticsearch(
 		ProcessChannel<Serializable> processChannel) {
 
 		NoticeableFuture<String> noticeableFuture = processChannel.write(
-			new StartSidecarProcessCallable(_getSidecarServerArgs()));
+			new StartSidecarProcessCallable(
+				_sidecarRuntimeConfiguration.getSidecarServerArgs()));
 
 		try {
 			return _waitForPublishedAddress(noticeableFuture);
@@ -527,21 +191,13 @@ public class Sidecar {
 		}
 	}
 
-	private static final String _DEFAULT_MODULES_FOLDER_NAME = "modules";
-
-	private static final String _SIDECAR_MODULES_FOLDER_NAME =
-		"liferay-sidecar-modules";
-
 	private static final Log _log = LogFactoryUtil.getLog(Sidecar.class);
 
 	private String _address;
-	private final ElasticsearchConfigurationWrapper
-		_elasticsearchConfigurationWrapper;
-	private final ElasticsearchInstancePaths _elasticsearchInstancePaths;
 	private ProcessChannel<Serializable> _processChannel;
 	private final ProcessExecutor _processExecutor;
 	private final FutureListener<Serializable> _restartFutureListener;
 	private final Path _sidecarHomePath;
-	private Path _sidecarTempDirPath;
+	private final SidecarRuntimeConfiguration _sidecarRuntimeConfiguration;
 
 }
